tests/auto/websockets/dataprocessor/tst_dataprocessor.cpp
@@ -193,7 +193,7 @@ private:
     //sequences
     void nonCharacterSequence(const char *sequence);
 
-    void doTest();
+    void doTest(int timeout = 0);
     void doCloseFrameTest();
 
     QString opCodeToString(quint8 opCode);
@@ -744,6 +744,7 @@ void tst_DataProcessor::frameTooSmall()
 
     dataProcessor.process(&buffer);
 
+    QTRY_VERIFY_WITH_TIMEOUT(errorSpy.count(), 7000);
     QCOMPARE(errorSpy.count(), 1);
     QCOMPARE(closeSpy.count(), 0);
     QCOMPARE(pingMessageSpy.count(), 0);
@@ -776,6 +777,7 @@ void tst_DataProcessor::frameTooSmall()
 
     dataProcessor.process(&buffer);
 
+    QTRY_VERIFY_WITH_TIMEOUT(errorSpy.count(), 7000);
     QCOMPARE(errorSpy.count(), 1);
     QCOMPARE(closeSpy.count(), 0);
     QCOMPARE(pingMessageSpy.count(), 0);
@@ -808,6 +810,8 @@ void tst_DataProcessor::frameTooSmall()
 
         dataProcessor.process(&buffer);
 
+        QTRY_VERIFY_WITH_TIMEOUT(errorSpy.count(), 7000);
+
         buffer.close();
         data.clear();
 
@@ -820,6 +824,7 @@ void tst_DataProcessor::frameTooSmall()
                             SIGNAL(errorEncountered(QWebSocketProtocol::CloseCode,QString)));
         dataProcessor.process(&buffer);
 
+        QTRY_VERIFY_WITH_TIMEOUT(errorSpy.count(), 7000);
         QCOMPARE(errorSpy.count(), 1);
         QCOMPARE(closeSpy.count(), 0);
         QCOMPARE(pingMessageSpy.count(), 0);
@@ -849,6 +854,7 @@ void tst_DataProcessor::frameTooSmall()
         buffer.open(QIODevice::ReadOnly);
         dataProcessor.process(&buffer);
 
+        QTRY_VERIFY_WITH_TIMEOUT(errorSpy.count(), 7000);
         QCOMPARE(errorSpy.count(), 1);
         QCOMPARE(closeSpy.count(), 0);
         QCOMPARE(pingMessageSpy.count(), 0);
@@ -877,6 +883,7 @@ void tst_DataProcessor::frameTooSmall()
         buffer.open(QIODevice::ReadOnly);
 
         dataProcessor.process(&buffer);
+        QTRY_VERIFY_WITH_TIMEOUT(errorSpy.count(), 7000);
         QCOMPARE(errorSpy.count(), 1);
         QCOMPARE(closeSpy.count(), 0);
         QCOMPARE(pingMessageSpy.count(), 0);
@@ -1400,7 +1407,7 @@ void tst_DataProcessor::incompletePayload_data()
 
 void tst_DataProcessor::incompletePayload()
 {
-    doTest();
+    doTest(7000);
 }
 
 void tst_DataProcessor::incompleteSizeField_data()
@@ -1430,13 +1437,13 @@ void tst_DataProcessor::incompleteSizeField_data()
 
 void tst_DataProcessor::incompleteSizeField()
 {
-    doTest();
+    doTest(7000);
 }
 
 //////////////////////////////////////////////////////////////////////////////////////////
 /// HELPER FUNCTIONS
 //////////////////////////////////////////////////////////////////////////////////////////
-void tst_DataProcessor::doTest()
+void tst_DataProcessor::doTest(int timeout)
 {
     QFETCH(quint8, firstByte);
     QFETCH(quint8, secondByte);
@@ -1465,6 +1472,7 @@ void tst_DataProcessor::doTest()
     buffer.setData(data);
     buffer.open(QIODevice::ReadOnly);
     dataProcessor.process(&buffer);
+    QTRY_VERIFY_WITH_TIMEOUT(errorSpy.count(), timeout);
     QCOMPARE(errorSpy.count(), 1);
     QCOMPARE(textMessageSpy.count(), 0);
     QCOMPARE(binaryMessageSpy.count(), 0);
